# aws-cdk-explorations

./: .gitignore  README.md  cdk.json  docker-compose.yml  package-lock.json  package.json
ec2/fast-gql/: index.js  index.ts  package-lock.json  package.json
lambda/play-py/: main.py  pyproject.toml
lambda/play-rs/: Cargo.toml
lambda/play-rs/.cargo/: config.toml
lambda/play-rs/src/: main.rs
lib/: aws-cdk-explorations-stack.ts  user-data.sh
test/: aws-cdk-explorations.test.ts
test/fixtures/postgrator/: .postgratorrc.cjs
