[tool.poetry]
name = "play-py"
version = "0.1.0"
description = "Simple Python lambda"
authors = ["Jhon Rocha <jhmrocha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
