[package]
name = "play-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
log = "0.4.14"
http = "0.2.4"
aws_lambda_events = "^0.5.0"
simple_logger = "1.11.0"
tokio = "1.6.1"
